<resources>
    <string name="app_name">SMS BOX</string>

    <string name="title_favorites">Favorites</string>
    <string name="title_templates">Templates</string>
    <string name="title_recipients">Recipients</string>
    <string name="title_settings">Settings</string>
    <string name="add_new_item">Add new item</string>
    <string name="bottom_sheet_create">Create</string>
    <string name="bottom_sheet_groups">Template Groups</string>
    <string name="bottom_sheet_option_template">Template</string>
    <string name="bottom_sheet_option_recipient">Recipient</string>
    <string name="bottom_sheet_option_placeholder">Placeholder</string>
    <string name="close_create_dialog">Close create dialog</string>
    <string name="dialog_new_template_title">New Template</string>
    <string name="title_new_template">New Template</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="divider_group">Group</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description (optional)</string>
    <string name="hint_message">Message</string>
    <string name="hint_recipient">Recipient</string>
    <string name="icon_color">Icon color</string>
    <string name="divider_template">Template</string>
    <string name="new_group">New Group</string>
    <string name="select_group">Select Group</string>
    <string name="desc_create_new_group">Create new group</string>
    <string name="desc_create_new_template">Create new template</string>
    <string name="discard_draft">Discard changes?</string>
    <string name="discard">Discard</string>

    <string name="material_dialog_title">Choose Color</string>
    <string name="material_dialog_negative_button">Cancel</string>
    <string name="material_dialog_positive_button" translatable="false">OK</string>
    <string name="add_recipient">Add Recipient</string>
    <string name="add_to_favorites">Add template to favorites</string>
    <string name="contacts">Contacts</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="add_number">Add number</string>
    <string name="enter_the_name">Enter the name for: %1$s</string>
    <string name="recipient_saved">Recipient saved</string>
    <string name="title_new_recipient">New Recipient</string>
    <string name="already_saved">Already saved</string>
    <string name="template_group_saved">Template group saved</string>
    <string name="select_contact">Select Contact</string>
    <string name="permission_dined">Permission dined</string>
    <string name="remove_phone_number">Remove phone number</string>
    <string name="open_group">Open template group</string>
    <string name="open_option_menu">Open option menu</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete item?</string>
    <string name="delete_group_confirmation">Are you sure you want to delete this group?</string>
    <string name="delete_template_confirmation">Are you sure you want to delete this template?</string>
    <string name="delete_recipient_confirmation">Are you sure you want to delete this recipient?</string>
    <string name="delete_placeholder_confirmation">Are you sure you want to delete this placeholder?</string>
    <string name="delete_group">Delete Group?</string>
    <string name="delete_template">Delete Template?</string>
    <string name="delete_recipient">Delete Recipient?</string>
    <string name="delete_placeholder">Delete Placeholder?</string>
    <string name="add_group">Add Group</string>
    <string name="transition_edit_template_group">transition_edit_template_group</string>
    <string name="transition_open_template_group">transition_open_template_group</string>
    <string name="all">All</string>
    <string name="groups">Groups</string>
    <string name="add_to_group">Add to group</string>
    <string name="selected_item">Selected item</string>
    <string name="ok">OK</string>
    <string name="hint_group_name">Group name</string>
    <string name="recipient">Recipient</string>
    <string name="recipient_group">Recipient group</string>
    <string name="remove_from_group">Remove from group</string>
    <string name="clear_group">Clear Group</string>
    <string name="saved">Saved</string>
    <string name="no_groups">No recipient groups</string>
    <string name="hint_recipient_group">Recipient group</string>
    <string name="no_group">No group</string>
    <string name="recipients">Recipients</string>
    <string name="select">Select</string>
    <string name="list_empty">The list is empty</string>
    <string name="group_list_empty">Add your first template group</string>
    <string name="template_group_empty">Template group empty</string>
    <string name="group">Group:</string>
    <string name="select_recipient">Select Recipient</string>
    <string name="no_saved_recipients">No saved recipients</string>
    <string name="no_recipients">No recipients</string>
    <string name="toast_add_to_group">Added to %1$s</string>
    <string name="save_to_file">Save to file</string>
    <string name="restore_from_file">Restore from file</string>
    <string name="backup">Backup</string>
    <string name="permission_denied">Permission denied. Backup is not possible.</string>
    <string name="undo">Undo</string>
    <string name="group_cleared">Group cleared</string>
    <string name="open">Open</string>
    <string name="saved_to_downloads">Saved to Downloads</string>
    <string name="backup_failed">Backup failed</string>
    <string name="restore_success">Restore database successful</string>
    <string name="restore_failed">Restore failed</string>
    <string name="restore">Restore</string>
    <string name="restore_database">Restore database</string>
    <string name="reсovery">Recovery</string>
    <string name="db_would_be_lost">Recovery will overwrite the current database, all data will be lost. Are you sure you want to restore the database?</string>
    <string name="invalid_file">Invalid file</string>
    <string name="select_item">Select Item</string>
    <string name="desc_create_new_recipient">Create new recipient</string>
    <string name="select_recipients">Select Recipients</string>
    <string name="select_groups">Select Groups</string>
    <string name="favorite_list_is_empty">Favorite list is empty</string>
    <string name="title_placeholders">Placeholders</string>
    <string name="placeholders">Placeholders</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="placeholders_info">A placeholder is a variable whose name and value can be stored here and then used in all your templates in a text message by writing \'#name\' (e.g. #company). When sending a message, this name will be replaced with its value that you specify here.</string>
    <string name="info">Info</string>
    <string name="err_unique_name">Name should be unique</string>
    <string name="add_new_placeholder">Add new placeholder</string>
    <string name="new_placeholder">New Placeholder</string>
    <string name="edit_placeholder">Edit Placeholder</string>
    <string name="edit_group">Edit Group</string>
    <string name="edit_recipient">Edit Recipient</string>
    <string name="edit_template">Edit Template</string>
    <string name="save_your_recipients_here">Save your recipients here</string>
    <string name="put_your_recipients_into_groups">Put your recipients into groups</string>
</resources>