<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_templates"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_templates" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_devices"
        android:icon="@drawable/ic_baseline_device_hub_24"
        android:title="@string/title_devices" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>