<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.recipients.view.RecipientsPagerFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/app_bar_elevation"
                android:background="@color/white"
                android:fitsSystemWindows="true">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolbar_recipients"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_scrollFlags="scroll|enterAlways"
                        app:title="@string/title_recipients" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tab_layout_recipient"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/tab_layout_height"
                        app:tabMode="fixed">

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tab_item_all_recipients"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tab_item_recipient_groups"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/groups" />

                    </com.google.android.material.tabs.TabLayout>

            </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/recipients_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_recipients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/desc_create_new_recipient"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/white"
            app:fabSize="auto" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>