<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.leviancode.android.gsmbox.ui.recipients.viewmodel.EditableRecipientViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/layout_recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        tools:context=".ui.templates.view.dialog.EditableTemplateGroupDialog">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="8dp"
            app:elevation="0dp"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/title_new_recipient">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_recipient_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save"
                tools:textColor="@color/secondary"
                android:enabled="@{viewModel.data.fieldsFilled}"
                android:textColor="@drawable/save_button_text_color_selector"
                android:onClick="@{() -> viewModel.onSaveClick()}"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_recipient_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_recipient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/hint_name"
                android:selectAllOnFocus="true"
                android:inputType="text"
                android:padding="8dp"
                android:text="@={viewModel.data.recipientName}"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_recipient_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_recipient_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:padding="8dp"
                android:text="@={viewModel.data.phoneNumber}"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_recipient_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:text="@string/contacts"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible"
            android:onClick="@{() -> viewModel.onContactsClick()}"
            app:icon="@drawable/ic_baseline_people_24"
            app:iconTint="@color/blue_grey_400" />

    </LinearLayout>

</layout>