<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.leviancode.android.gsmbox.ui.recipients.viewmodel.EditableRecipientGroupViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/layout_recipient_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        tools:context=".ui.templates.view.dialog.EditableTemplateGroupDialog">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="8dp"
            app:elevation="0dp"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/new_group">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_recipient_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save"
                tools:textColor="@color/secondary"
                android:enabled="@{viewModel.data.fieldsFilled}"
                android:textColor="@drawable/save_button_text_color_selector"
                android:onClick="@{() -> viewModel.onSaveClick()}"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_recipient_group_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_layout_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_recipient_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/hint_name"
                android:selectAllOnFocus="true"
                android:inputType="text"
                android:padding="8dp"
                android:text="@={viewModel.data.recipientGroupName}"
                android:textSize="@dimen/form_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_recipient_group_icon_color"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/icon_color"
            android:textColor="@color/grey"
            android:onClick="@{() -> viewModel.onIconColorClick()}"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:iconTint="@{viewModel.data.recipientGroupIconColor}"
            tools:iconTint="@color/blue_grey_300"/>

    </LinearLayout>

</layout>