<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.leviancode.android.gsmbox.ui.entities.recipients.RecipientGroupUI" />
        <variable
            name="viewModel"
            type="com.leviancode.android.gsmbox.ui.screens.recipients.groups.edit.RecipientGroupEditViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/layout_recipient_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        tools:context=".ui.screens.templates.groups.edit.TemplateGroupEditFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="8dp"
            app:elevation="0dp"
            app:navigationIconTint="?colorOnPrimary"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/new_group">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_recipient_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save"
                android:enabled="@{model.name.length() > 0}"
                android:textColor="@drawable/save_button_text_color_selector"
                android:onClick="@{() -> viewModel.onSaveClick(model)}"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_recipient_group_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_layout_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_recipient_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/hint_name"
                android:selectAllOnFocus="true"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="?android:attr/textColorPrimary"
                app:showError="@{viewModel.nameValidation}"
                android:text="@={model.name}"
                android:textSize="@dimen/form_text_size" >
                <requestFocus/>
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_recipient_group_icon_color"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/icon_color"
            android:textColor="?android:attr/textColorPrimary"
            android:onClick="@{() -> viewModel.onIconColorClick(model)}"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:setButtonIconTintGroup="@{model.iconColor}"
            tools:iconTint="@color/default_group_icon_color"/>

    </LinearLayout>

</layout>