<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.templates.view.dialog.EditableTemplateDialog">

    <data>
        <variable
            name="viewModel"
            type="com.leviancode.android.gsmbox.ui.templates.viewmodel.EditableTemplateViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:elevation="0dp"
            android:background="@android:color/transparent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/title_new_template"
                app:navigationIcon="@drawable/ic_baseline_close_24">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_template_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:enabled="@{viewModel.data.fieldsFilled}"
                    android:text="@string/save"
                    android:textColor="@drawable/save_button_text_color_selector"
                    android:onClick="@{() -> viewModel.onSaveClick()}"/>
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_template_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_template_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:padding="8dp"
                        android:text="@={viewModel.data.name}"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_template_message"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_template_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_message"
                        android:inputType="text"
                        android:padding="8dp"
                        android:text="@={viewModel.data.message}"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/recipients_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_template_add_recipient"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:onClick="@{() -> viewModel.onAddNumberClick()}"
                        android:text="@string/recipient"
                        android:textColor="@color/grey"
                        app:icon="@drawable/ic_baseline_add_24"
                        app:iconTint="@color/blue_grey_300"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_template_add_recipient_group"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{() -> viewModel.onAddNumberClick()}"
                        android:text="@string/recipient_group"
                        android:textColor="@color/grey"
                        app:icon="@drawable/ic_baseline_library_add_24"
                        app:iconTint="@color/blue_grey_300"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_template_icon_color"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/icon_color"
                    android:textColor="@color/grey"
                    android:onClick="@{() -> viewModel.onIconColorClick()}"
                    app:icon="@drawable/ic_baseline_color_lens_24"
                    app:iconTint="@{viewModel.data.iconColor}"
                    tools:iconTint="@color/blue_grey_300" />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>





</layout>

